# bear

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  Makefile  README.md
bear-engine/: CMakeLists.txt
bear-engine/common/include/: easing.hpp  level_code_value.hpp
bear-engine/core/: CMakeLists.txt
bear-engine/core/doc/: Doxyfile
bear-engine/core/src/: CMakeLists.txt  bear_gettext.hpp
bear-engine/core/test/: CMakeLists.txt
bear-engine/desktop/: CMakeLists.txt
bear-engine/desktop/locale/: CMakeLists.txt
bear-engine/desktop/man/: CMakeLists.txt  running-bear.sgml
bear-engine/doc/: Doxyfile
bear-engine/doc/diagram/: visual.dia
bear-engine/doc/examples/: CMakeLists.txt  TODO.txt
bear-engine/doc/get-started/: README.md  project-wizard.sh
bear-engine/lib/doc/: Doxyfile
bear-engine/lib/src/: CMakeLists.txt  ambient_sound.cpp  base_ground.cpp  base_train.cpp  block.cpp  bridge.cpp  browser_launcher_toggle.cpp  camera.cpp  camera_on_object.cpp  camera_shaker.cpp  camera_toggle.cpp  change_camera_size.cpp  clone_toggle.cpp  crossfade_sequence.cpp  cursor.cpp  decorative_effect.cpp  decorative_flow.cpp  decorative_item.cpp  decorative_model.cpp  decorative_rectangle.cpp  decorative_toggle.cpp  delayed_kill_item.cpp  delayed_level_loading.cpp  density_rectangle_creator.cpp  descending_ceiling.cpp  environment_rectangle_creator.cpp  explosion_effect_item.cpp  falling_block.cpp  force_rectangle_creator.cpp  friction_rectangle_creator.cpp  game_quit.cpp  hidden_block.cpp  item_creator.cpp  killer.cpp  level_loader_item.cpp  level_loader_progression_item.cpp  level_loader_toggle.cpp  level_popper_toggle.cpp  level_settings.cpp  line.cpp  (+25 more)
bear-engine/running_bear/: CMakeLists.txt  running_bear.hpp
bear-engine/running_bear/code/: main.cpp  running_bear.cpp
bear-engine/running_bear/include/: running_bear.hpp
bear-engine/running_bear/src/: main.cpp  running_bear.cpp
bear-engine/test/entity-count/: CMakeLists.txt  main.cpp
bear-factory/: CMakeLists.txt
bear-factory/animation-editor/doc/: Doxyfile
bear-factory/animation-editor/src/: CMakeLists.txt  about_dialog.cpp  animation_editor.cpp  frame_duration_dialog.cpp
bear-factory/bear-editor/doc/: Doxyfile
bear-factory/bear-editor/src/: accelerator_table.cpp  animation.cpp  animation_file_type.cpp  animation_file_xml_writer.cpp  any_animation.cpp  arithmetic_parser.cpp  base_editor_application.cpp  bitmap_rendering_attributes.cpp  check_error.cpp  class_not_found.cpp  color.cpp  easing_combo.cpp  easing_combo_popup.cpp  font.cpp  frame_edit.cpp  human_readable.cpp  image_pool.cpp  image_selection_dialog.cpp  item_check_result.cpp  item_class.cpp  item_class_pool.cpp  item_class_selection_dialog.cpp  item_class_xml_parser.cpp  item_comparator.cpp  item_event.cpp  item_reference_edit.cpp  path_configuration.cpp  slider_with_ticks.cpp  splash_screen.cpp  sprite.cpp  sprite_image_cache.cpp  sprite_view.cpp  sprite_view_ctrl.cpp  trinary_logic.cpp
bear-factory/desktop/: CMakeLists.txt
bear-factory/desktop/applications/: bf-animation-editor.desktop  bf-level-editor.desktop  bf-model-editor.desktop  desc2img.desktop
bear-factory/desktop/images/: CMakeLists.txt
bear-factory/desktop/locale/: CMakeLists.txt
bear-factory/desktop/man/: CMakeLists.txt  bf-animation-editor.sgml  bf-level-editor.sgml  bf-model-editor.sgml
bear-factory/desktop/menu/: bf-animation-editor  bf-level-editor  bf-model-editor
bear-factory/desktop/pixmaps/: bear-factory.xpm
bear-factory/item-description/generic/: ambient_sound.xml  base_item.xml  block.xml  bridge.xml  browser_launcher_toggle.xml  camera.xml  camera_on_object.xml  camera_shaker.xml  camera_toggle.xml  change_camera_size.xml  clone_toggle.xml  crossfade_sequence.xml  cursor.xml  decorative_effect.xml  decorative_flow.xml  decorative_item.xml  decorative_model.xml  decorative_rectangle.xml  decorative_toggle.xml  delayed_kill_item.xml  delayed_level_loading.xml  density_rectangle_creator.xml  descending_ceiling.xml  environment_rectangle_creator.xml  explosion_effect_item.xml  force_rectangle_creator.xml  friction_rectangle_creator.xml  game_quit.xml  hidden_block.xml  item_creator.xml  killer.xml  level_loader_item.xml  level_loader_progression_item.xml  level_loader_toggle.xml  level_popper_toggle.xml  level_settings.xml  line.xml  linear_movement_sequence_loop.xml  lines.xml  messageable_item.xml  (+22 more)
bear-factory/level-editor/doc/: Doxyfile
bear-factory/level-editor/src/: arrange.cpp  clone_selection_dialog.cpp  configuration.cpp  grid.cpp  ingame_view_frame.cpp  item_selection.cpp  layer.cpp  layer_list_frame.cpp  layer_properties_frame.cpp  level.cpp  level_check_result.cpp  level_editor.cpp  level_editor_icons.cpp  level_file_xml_reader.cpp  level_file_xml_writer.cpp  level_overview_frame.cpp  level_runner.cpp  level_thumbnail_ctrl.cpp  main_frame.cpp  run_configuration.cpp  selection_manager.cpp  slope.cpp
bear-factory/model-editor/doc/: Doxyfile
bear-factory/model-editor/src/: about_dialog.cpp  action.cpp  gui_model.cpp  mark.cpp  mark_list_frame.cpp  model_editor.cpp  model_frame.cpp  model_properties_ctrl.cpp  model_snapshot_tweener.cpp  snapshot_date_frame.cpp  snapshot_frame.cpp  sound_description.cpp  windows_layout.cpp
bear-factory/schema/0.5/: animation-file.xsd  item-description.xsd
bear-factory/tool/: CMakeLists.txt
bear-factory/tool/spritedesc-conv/: CMakeLists.txt
cmake/: CMakeLists.txt
cmake-module/: CMakeLists.txt  bear-config-version.cmake  bear-config.cmake
cmake/editors/: CMakeLists.txt
cmake/editors/animation-editor/: CMakeLists.txt
cmake/editors/bear-editor/: CMakeLists.txt
cmake/editors/desktop/: CMakeLists.txt
cmake/editors/level-editor/: CMakeLists.txt
cmake/editors/model-editor/: CMakeLists.txt
cmake/editors/package/: CMakeLists.txt
cmake/engine/: CMakeLists.txt
cmake/helpers/: BoostTestHelpers.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  bear-config.cmake  compiler-defaults.cmake  dependencies.cmake  docbook-to-man.cmake  gettext.cmake  options.cmake  prepend-string.cmake  uninstall.cmake
(+2953 files in other folders)
