add_subdirectory(01-screen)
add_subdirectory(02-display)
add_subdirectory(03-sprite)
add_subdirectory(04-text)
add_subdirectory(05-keyboard)
add_subdirectory(06-mouse)
add_subdirectory(07-joystick)
add_subdirectory(08-music)
add_subdirectory(09-sound)
add_subdirectory(10-stars)
add_subdirectory(11-animation)
add_subdirectory(12-shader)
add_subdirectory(13-input)
add_subdirectory(14-gui)
add_subdirectory(15-physics)
